moved frontend build to gradle